--- a/create_animation.ipynb
+++ b/create_animation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "dae809f1",
    "metadata": {},
    "outputs": [],
@@ -24,6 +24,26 @@
     "    frames.append(imageio.v2.imread(file))\n",
     "\n",
     "imageio.mimsave(\"UAV_animation.gif\", frames, duration=100)  # duration per frame in seconds\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "ff5acc34",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "frames = []\n",
+    "def frame_number(fname):\n",
+    "    return int(re.search(r\"\\d+\", fname).group())\n",
+    "\n",
+    "files = sorted(glob.glob(\"result_step_*.png\"), key=frame_number)\n",
+    "\n",
+    "\n",
+    "for file in files:\n",
+    "    frames.append(imageio.v2.imread(file))\n",
+    "\n",
+    "imageio.mimsave(\"result_step.gif\", frames, duration=100)  # duration per frame in seconds"
    ]
   }
  ],
